Psi3 can be compiled in from an included snapshot or from an external location.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,6 +247,7 @@ CONFIGURE_FILE(
 set(LINK_LIBRARIES)
 list(APPEND LINK_LIBRARIES ${LIBRYSQ_LIBRARY})
 list(APPEND LINK_LIBRARIES ${LIBINT2_LIBRARY})
+list(APPEND LINK_LIBRARIES ${PSI3_LIBRARIES})
 list(APPEND LINK_LIBRARIES ${MADNESS_LIBRARIES})
 list(APPEND LINK_LIBRARIES ${Boost_LIBRARIES})
 list(APPEND LINK_LIBRARIES ${LAPACK_LIBRARIES})
