--- a/src/lib/mpqc_config.h.in
+++ b/src/lib/mpqc_config.h.in
@@ -296,6 +296,18 @@
 /* Define if you have the <dlfcn.h> header file.  */
 #cmakedefine HAVE_DLFCN_H @HAVE_DLFCN_H@
 
+/* Defines the sizeof(int64_t) */
+#cmakedefine C_TYPE_INT64_T @C_TYPE_INT64_T@
+
+/* Defines the sizeof(int32_t) */
+#cmakedefine C_TYPE_INT32_T @C_TYPE_INT32_T@
+
+/* Defines the sizeof(long) */
+#cmakedefine C_TYPE_LONG @C_TYPE_LONG@
+
+/* Defines the sizeof(int) */
+#cmakedefine C_TYPE_INT @C_TYPE_INT@
+
 /* Determines the width of the integer use by BLAS F77 interface */
 #cmakedefine F77_INTEGER_WIDTH @F77_INTEGER_WIDTH@
 
