--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,24 +56,23 @@ include(TestCXXAcceptsFlag)
 include(CheckCXXSourceCompiles)
 
 if (MPQC_NEW_FEATURES)
-  if (CMAKE_CXX_COMPILER_ID MATCHES Clang)
-    message("* C++11: assuming Clang doesn't need -std=c++0x flag.")
-  else()
-    # C++11 flag is required
-    CHECK_CXX_ACCEPTS_FLAG("-std=c++0x" CXX_FLAG_CXX0X)
-    CHECK_CXX_ACCEPTS_FLAG("-std=c++11" CXX_FLAG_CXX11)
-    set(HAVE_CXX11 FALSE)
-    if (CXX_FLAG_CXX0X)
-      set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
-      message(STATUS "C++11 flag: -std=c++0x")
-      set(HAVE_CXX11 TRUE)
-    elseif(CXX_FLAG_CXX11)
-      set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
-      message(STATUS "C++11 flag: -std=c++11")
-      set(HAVE_CXX11 TRUE)
-    endif()
+  add_definitions(-DMPQC_NEW_FEATURES)
+  
+  # "some" C++11 features are required, check if we need a flag to turn on the support in the compiler
+  # N.B. even though clang++ assumes c++11, it still needs the flag for some features (e.g. static_assert)
+  CHECK_CXX_ACCEPTS_FLAG("-std=c++11" CXX_FLAG_CXX11)
+  if(CXX_FLAG_CXX11)
+    set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
+    message(STATUS "C++11 flag: -std=c++11")
   endif()
-  add_definitions(-DMPQC_NEW_FEATURES)  
+  if (NOT CXX_FLAG_CXX11)
+    CHECK_CXX_ACCEPTS_FLAG("-std=c++0x" CXX_FLAG_CXX0X)
+  endif()
+  if (CXX_FLAG_CXX0X)
+    set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
+    message(STATUS "C++11 flag: -std=c++0x")
+  endif()
+  
 endif()
 
 # C++11 features
