1) CI properly finishes 2) Added 1 CI test case, part of check0 and higher.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,6 +272,12 @@ else()
   message("** R12 methods require Libint2.  R12 methods are disabled")
 endif()
 # propagate some variables into Makefiles
+if (MPQC_NEW_FEATURES)
+  set(MAKE_ASSUME_NEW_FEATURES yes)
+  if (MPQC_NEW_FEATURES_CI)
+    set(MAKE_ASSUME_NEW_FEATURES_CI yes)
+  endif()
+endif()
 if (MPQC_R12)
   set(MAKE_ASSUME_R12 yes)
 endif()
