--- a/src/lib/chemistry/qc/scf/mpqc.in
+++ b/src/lib/chemistry/qc/scf/mpqc.in
@@ -4,7 +4,7 @@ mpqc:(
 )
 
 nproc = 5
-molecule = $:he
+molecule = $:h2o
 coor = $:symcoor
 message = $:message1
 basis_matrixkit = $:replmatrixkit
@@ -23,17 +23,20 @@ mole<DFCLHF>: (
 
   df_basis<GaussianBasisSet>:(
     molecule = $..:molecule
-    name = "cc-pVDZ-RI"
+    name = "cc-pVDZ-JKFIT"
+    %name = "aug-cc-pVTZ"
+    %name = "cc-pVDZ-RI"
     %name = "cc-pVDZ"
-    puream=yes
+    %name = "6-31G"
+    %puream=yes
     %name = "6-31G"
   )
   
   world<WavefunctionWorld>:(
   	wfn = $..:mole
   	df_basis = $..:df_basis
-  	%df_kernel = "exp(20)"  
-    df_kernel = "coulomb"
+  	df_kernel = "exp(1)"  
+    %df_kernel = "coulomb"
   	df_solver = "bunchkaufman_refine"
   	df_local_coulomb = yes
   	df_local_exchange = yes
@@ -48,9 +51,9 @@ mole<DFCLHF>: (
   molecule = $:molecule
   mbasis<GaussianBasisSet>: (
     molecule = $:molecule
-    %name = "cc-pVDZ"
-    name = "6-31G"
-    puream=yes
+    name = "cc-pVDZ"
+    %name = "STO-3G"
+    %puream=yes
     matrixkit = $:basis_matrixkit
   )
   basis<SplitBasisSet>:(
@@ -71,22 +74,22 @@ mole<DFCLHF>: (
   %)
 
   %guess_wavefunction = "scftest.wfn"
-  %guess_wavefunction = $:ehw_guess
+  guess_wavefunction = $:guess
   %debug = 4
 )
 
-guess<HSOSHF>: (
+guess<CLHF>: (
   integral_storage=32000000
   value_accuracy = 1e-9
   molecule = $:molecule
   coor = $:coor
 
   basis = $:mole:basis
-  xbasis<GaussianBasisSet>: (
-    matrixkit = $:basis_matrixkit
-    molecule = $:molecule
-    name = "STO-3G"
-  )
+  %basis<GaussianBasisSet>: (
+  %  matrixkit = $:basis_matrixkit
+  %  molecule = $:molecule
+  %  name = "STO-3G"
+  %)
 )
 
 ehw_guess<ExtendedHuckelWfn>: (
@@ -442,6 +445,27 @@ C [ 0.901	2.99	-1.135 ]
 C [ -0.029	3.382	-0.245 ]
         }
 )
+
+h2o<Molecule>: (
+  units = bohr
+  symmetry = c1
+  { atoms geometry } = {
+      O  [ -0.00000000  -0.11130487  -0.00000000 ]
+      H  [ -1.53256789   0.88382491   0.00000000 ]
+      H  [  1.53256789   0.88382491   0.00000000 ]
+  }
+)
+
+hf<Molecule>: (
+  units = bohr
+  symmetry = c1
+  { atoms geometry } = {
+      F  [  0.00000000   0.00000000   0.00000000 ]
+      H  [  1.70000000   0.00000000   0.00000000 ]
+  }
+)
+
+
 
 taxol<Molecule>: (
   units = angstrom
