1) Improved documentation build (some, but not all, dependency tracking) 2) Improved documentation: added modules Init, State, and KeyVal
OPEN - issue MPQC-66: Port all features of autoconf+Makefile build to the new cmake-based build
http://valeev.chem.vt.edu:8080/browse/MPQC-66

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -304,7 +304,7 @@ endif()
 
 # sources
 add_subdirectory(src)
-add_subdirectory(doc)
+add_subdirectory(doc EXCLUDE_FROM_ALL) # will not build docs by default
 
 # checking/testing
 add_subdirectory(test)
