1) Renamed some test programs according to the MPQC-standard XXXtest 2) Removed test programs from being compiled into executables 3) Shared libraries now compile ... work? Still some problems on my mac.
--HG--
rename : src/lib/chemistry/qc/lmp2/testsma.cc => src/lib/chemistry/qc/lmp2/smatest.cc
rename : src/lib/chemistry/qc/lmp2/timesma.cc => src/lib/chemistry/qc/lmp2/smatime.cc
rename : src/lib/math/symmetry/testpg.cc => src/lib/math/symmetry/pointgrouptest.cc
rename : src/lib/util/misc/formiot.cc => src/lib/util/misc/formiotest.cc
rename : src/lib/util/misc/tregtime.cc => src/lib/util/misc/regtimetest.cc

--- a/src/bin/mpqc/CMakeLists.txt
+++ b/src/bin/mpqc/CMakeLists.txt
@@ -2,10 +2,17 @@ set(executable mpqc)
 
 add_library(
   mpqcinit
+  SHARED
   mpqcin.cc
   mpqcinit.cc
   parse.cc
   scan.cc  
+)
+
+target_link_libraries(
+  mpqcinit
+  chemistry
+  util
 )
 
 add_executable(
@@ -16,12 +23,6 @@ add_executable(
 target_link_libraries(
   ${executable}
   mpqcinit
-  chemistry
-  math
-  util
-  chemistry
-  math
-  util
 )
 
 target_link_libraries(
@@ -36,4 +37,4 @@ foreach (_file ${headers})
   install(FILES ${_file} DESTINATION include/mpqc)
 endforeach()
 
-install(TARGETS mpqcinit ARCHIVE DESTINATION lib)
+install(TARGETS mpqcinit DESTINATION lib)
