--- a/src/lib/chemistry/CMakeLists.txt
+++ b/src/lib/chemistry/CMakeLists.txt
@@ -12,6 +12,15 @@ endforeach()
 list(APPEND objects $<TARGET_OBJECTS:molecule>)
 list(APPEND objects $<TARGET_OBJECTS:solvent>)
 
-add_library(chemistry STATIC ${objects})
+add_library(chemistry ${objects})
 set(chemistry/OBJECTS ${objects} PARENT_SCOPE)
-install(TARGETS chemistry ARCHIVE DESTINATION lib)
+install(TARGETS chemistry DESTINATION lib)
+
+set(chemistry_deplibs math util)
+if (HAVE_LIBINT2)
+  set(chemistry_deplibs ${chemistry_deplibs} ${LIBINT2_LIBRARY})
+endif()
+if (HAVE_MADNESS)
+  set(chemistry_deplibs ${chemistry_deplibs} ${MADNESS_LIBRARIES})
+endif()
+target_link_libraries(chemistry ${chemistry_deplibs})
