--- a/src/lib/chemistry/qc/lmp2/CMakeLists.txt
+++ b/src/lib/chemistry/qc/lmp2/CMakeLists.txt
@@ -11,14 +11,16 @@ add_library(lmp2 OBJECT
   pop_local.cc
   sma.cc
   smautil.cc
-  testsma.cc
-  timesma.cc
 )
 
 # tests
 
-#set_property(SOURCE avlmmaptest.cc PROPERTY COMPILE_DEFINITIONS
-#    -DSRCDIR="${CMAKE_CURRENT_SOURCE_DIR}")
-#add_executable(avlmmaptest EXCLUDE_FROM_ALL avlmmaptest.cc $<TARGET_OBJECTS:lmp2>)
-#add_test(avlmmaptest avlmmaptest)
+set_property(SOURCE avlmmaptest.cc PROPERTY COMPILE_DEFINITIONS
+    -DSRCDIR="${CMAKE_CURRENT_SOURCE_DIR}")
+add_executable(avlmmaptest EXCLUDE_FROM_ALL avlmmaptest.cc $<TARGET_OBJECTS:lmp2>)
+add_test(avlmmaptest avlmmaptest)
 
+set_property(SOURCE smatest.cc PROPERTY COMPILE_DEFINITIONS
+    -DSRCDIR="${CMAKE_CURRENT_SOURCE_DIR}")
+add_executable(smatest EXCLUDE_FROM_ALL smatest.cc $<TARGET_OBJECTS:lmp2>)
+add_test(smatest smatest)
