--- a/src/lib/math/symmetry/CMakeLists.txt
+++ b/src/lib/math/symmetry/CMakeLists.txt
@@ -9,8 +9,11 @@ add_library(symmetry OBJECT
   pointgrp.cc
   rep.cc
   symop.cc
-  testpg.cc
   tetra.cc)
 
 # tests
+set_property(SOURCE pointgrouptest.cc PROPERTY COMPILE_DEFINITIONS
+    -DSRCDIR="${CMAKE_CURRENT_SOURCE_DIR}")
+add_executable(pointgrouptest EXCLUDE_FROM_ALL pointgrouptest.cc $<TARGET_OBJECTS:symmetry>)
+add_test(pointgrouptest pointgrouptest)
 
