--- a/src/lib/chemistry/CMakeLists.txt
+++ b/src/lib/chemistry/CMakeLists.txt
@@ -23,4 +23,17 @@ endif()
 if (HAVE_MADNESS)
   set(chemistry_deplibs ${chemistry_deplibs} ${MADNESS_LIBRARIES})
 endif()
+if (HAVE_PSI3)
+  set(chemistry_deplibs ${chemistry_deplibs} ${PSI3_LIBRARY})
+endif()
+if (ARMCI_LIBRARIES)
+  set(chemistry_deplibs ${chemistry_deplibs} ${ARMCI_LIBRARIES})
+endif()
+if (HAVE_BOOST)
+  set(chemistry_deplibs ${chemistry_deplibs} ${Boost_LIBRARIES})
+endif()
+if (HAVE_HDF5)
+  set(chemistry_deplibs ${chemistry_deplibs} ${HDF5_LIBRARIES})
+endif()
+
 target_link_libraries(chemistry ${chemistry_deplibs})
