1) Moved most of pympqc into the main branch. Some linkage issues, but close. IN PROGRESS - issue MPQC-60: merge pympqc into mpqc-ci http://valeev.chem.vt.edu:8080/browse/MPQC-60 2) added boost archive to avoid having to download every time.

--- a/src/lib/chemistry/CMakeLists.txt
+++ b/src/lib/chemistry/CMakeLists.txt
@@ -31,6 +31,9 @@ if (ARMCI_LIBRARIES)
 endif()
 if (HAVE_BOOST)
   set(chemistry_deplibs ${chemistry_deplibs} ${Boost_LIBRARIES})
+  if (PYTHONLIBS_FOUND)
+    set(chemistry_deplibs ${chemistry_deplibs} ${PYTHON_LIBRARIES})
+  endif()
 endif()
 if (HAVE_HDF5)
   set(chemistry_deplibs ${chemistry_deplibs} ${HDF5_LIBRARIES})
