--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(chemistry)
 add_subdirectory(math)
 add_subdirectory(util)
 add_subdirectory(mpqc)
+add_subdirectory(extern)
 
 # library headers
 file(GLOB_RECURSE headers RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} chemistry/*.h math/*.h util/*h)
