--- a/src/lib/chemistry/CMakeLists.txt
+++ b/src/lib/chemistry/CMakeLists.txt
@@ -26,9 +26,6 @@ endif()
 if (HAVE_PSI3)
   set(chemistry_deplibs ${chemistry_deplibs} ${PSI3_LIBRARY})
 endif()
-if (ARMCI_LIBRARIES)
-  set(chemistry_deplibs ${chemistry_deplibs} ${ARMCI_LIBRARIES})
-endif()
 if (HAVE_BOOST)
   set(chemistry_deplibs ${chemistry_deplibs} ${Boost_LIBRARIES})
   if (PYTHONLIBS_FOUND)
@@ -37,6 +34,12 @@ if (HAVE_BOOST)
 endif()
 if (HAVE_HDF5)
   set(chemistry_deplibs ${chemistry_deplibs} ${HDF5_LIBRARIES})
+endif()
+if (HAVE_ARMCI)
+  set(chemistry_deplibs ${chemistry_deplibs} ${ARMCI_LIBRARIES})
+endif()
+if (HAVE_MPI)
+  set(chemistry_deplibs ${chemistry_deplibs} ${MPI_LIBRARIES})
 endif()
 
 target_link_libraries(chemistry ${chemistry_deplibs})
