1) Instead of ambiguous "multiplicity" keyword/methods, switched to "magnetic_moment" 2) Introduced Molecule::total_Z, and renamed Molecule::nuclear_charge to total_charge. 3) Improved documentation.

--- a/src/lib/chemistry/CMakeLists.txt
+++ b/src/lib/chemistry/CMakeLists.txt
@@ -24,7 +24,7 @@ if (HAVE_MADNESS)
   set(chemistry_deplibs ${chemistry_deplibs} ${MADNESS_LIBRARIES})
 endif()
 if (HAVE_PSI3)
-  set(chemistry_deplibs ${chemistry_deplibs} ${PSI3_LIBRARY})
+  set(chemistry_deplibs ${chemistry_deplibs} ${PSI3_LIBRARIES})
 endif()
 if (HAVE_BOOST)
   set(chemistry_deplibs ${chemistry_deplibs} ${Boost_LIBRARIES})
