--- a/src/lib/util/CMakeLists.txt
+++ b/src/lib/util/CMakeLists.txt
@@ -9,6 +9,12 @@ set(subdirectories
   render
   state
 )
+if (HAVE_MADNESS)
+  set(subdirectories
+      ${subdirectories}
+      madness)
+  set(util_deplibs ${MADNESS_LIBRARIES})
+endif()
 
 foreach(s ${subdirectories})
   add_subdirectory(${s})
@@ -18,3 +24,4 @@ endforeach()
 set(util/OBJECTS ${objects} PARENT_SCOPE)
 add_library(util ${objects})
 install(TARGETS util DESTINATION lib)
+target_link_libraries(util ${util_deplibs})
