Documentation updates starting at top.dox ... updated overview.dox (DONE), working on compile.dox, removed download.dox
--HG--
extra : rebase_source : db8c6474e9018806d2fd9b4087ec27b84204c823

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -14,7 +14,6 @@ if(DOXYGEN_FOUND)
                       DEPENDS
                         ${CMAKE_CURRENT_SOURCE_DIR}/compile.dox
                         ${CMAKE_CURRENT_SOURCE_DIR}/develop.dox
-                        ${CMAKE_CURRENT_SOURCE_DIR}/download.dox
                         ${CMAKE_CURRENT_SOURCE_DIR}/footer.html
                         ${CMAKE_CURRENT_SOURCE_DIR}/overview.dox
                         ${CMAKE_CURRENT_SOURCE_DIR}/sf_footer.html
@@ -37,6 +36,7 @@ if(DOXYGEN_FOUND)
                         ${CMAKE_SOURCE_DIR}/src/lib/chemistry/qc/psi/mpqcpsi.dox
                         ${CMAKE_SOURCE_DIR}/src/lib/math/scmat/scmat.dox
                         ${CMAKE_SOURCE_DIR}/src/lib/math/symmetry/symmetry.dox
+                        ${CMAKE_SOURCE_DIR}/src/lib/mpqc/utility/utility.dox
                         ${CMAKE_SOURCE_DIR}/src/lib/util/class/class.dox
                         ${CMAKE_SOURCE_DIR}/src/lib/util/group/group.dox
                         ${CMAKE_SOURCE_DIR}/src/lib/util/keyval/keyval.dox
