Added tests for tiledarray interface.
--HG--
rename : src/bin/TA_Ints_test/CMakeLists.txt => src/lib/mpqc/interfaces/tiledarray/tests/CMakeLists.txt
rename : src/bin/TA_Ints_test/IntegralEnginePool_Test.cc => src/lib/mpqc/interfaces/tiledarray/tests/IntegralEnginePool_Test.cc

--- a/src/lib/mpqc/CMakeLists.txt
+++ b/src/lib/mpqc/CMakeLists.txt
@@ -5,6 +5,8 @@
 #   ${CC_SOURCES}
 # )
 
+add_subdirectory(interfaces/tiledarray/tests)
+
 # # library headers
 # file(GLOB_RECURSE headers RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.hpp)
 # foreach (_file ${headers})
