Moved tensor, blas, matrix to mpqc/math Fixed linking error due to libutil
--HG--
rename : src/lib/mpqc/blas.hpp => src/lib/mpqc/math/blas.hpp
rename : src/lib/mpqc/matrix.hpp => src/lib/mpqc/math/matrix.hpp
rename : src/lib/mpqc/tensor.hpp => src/lib/mpqc/math/tensor.hpp
rename : src/lib/mpqc/tensor/base.hpp => src/lib/mpqc/math/tensor/base.hpp
rename : src/lib/mpqc/tensor/cast.hpp => src/lib/mpqc/math/tensor/cast.hpp
rename : src/lib/mpqc/tensor/exception.hpp => src/lib/mpqc/math/tensor/exception.hpp
rename : src/lib/mpqc/tensor/expression.hpp => src/lib/mpqc/math/tensor/expression.hpp
rename : src/lib/mpqc/tensor/forward.hpp => src/lib/mpqc/math/tensor/forward.hpp
rename : src/lib/mpqc/tensor/functional.hpp => src/lib/mpqc/math/tensor/functional.hpp
rename : src/lib/mpqc/tensor/order.hpp => src/lib/mpqc/math/tensor/order.hpp
rename : src/lib/mpqc/tensor/permute.hpp => src/lib/mpqc/math/tensor/permute.hpp
rename : src/lib/mpqc/tensor/ref.hpp => src/lib/mpqc/math/tensor/ref.hpp
rename : src/lib/mpqc/tensor/test.cpp => src/lib/mpqc/math/tensor/test.cpp

--- a/src/lib/util/CMakeLists.txt
+++ b/src/lib/util/CMakeLists.txt
@@ -24,4 +24,8 @@ endforeach()
 set(util/OBJECTS ${objects} PARENT_SCOPE)
 add_library(util ${objects})
 install(TARGETS util DESTINATION lib)
+
 target_link_libraries(util ${util_deplibs})
+# N.B. dlopen dependencies
+target_link_libraries(util ${CMAKE_DL_LIBS})
+ 
