--- a/src/lib/mpqc/CMakeLists.txt
+++ b/src/lib/mpqc/CMakeLists.txt
@@ -20,7 +20,7 @@ install(FILES range.hpp DESTINATION include/mpqc)
 
 # tests
 
-add_executable(tensor.test EXCLUDE_FROM_ALL tensor/test.cpp)
+add_executable(tensor.test EXCLUDE_FROM_ALL math/tensor/test.cpp)
 
 # target_link_libraries(test-mpqc ${Boost_LIBRARIES})
 # #target_link_libraries(test-mpqc ${LAPACK_LIBRARIES})
